main.tf
provider "aws" {
    region = var.AWS_REGION
    access_key = var.AWS_ACCESS_KEY
    secret_key = var.AWS_SECRET_KEY
}
resource "aws_instance" "ec2_group7" {
    ami = var.AWS_AMI
    instance_type = "m5.xlarge"
    vpc_security_group_ids = [aws_security_group.instance_sg.id]
    key_name = aws_key_pair.aws-ec2-g7.key_name
    user_data = <<-EOF
        #!/bin/bash
        sudo apt-get update
        sudo apt-get install -y apache2
        sudo systemctl start apache2
        sudo systemctl enable apache2
        sudo echo "<h1>Hello students</h1>" > /var/www/html/index.html
    EOF 
    tags = {
        Name = "ec2_group7"
    }
}
resource "aws_security_group" "instance_sg" {
    name = "ec2_group7"
    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "-1"
        cidr_blocks     = ["0.0.0.0/0"]
    }
    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
resource "aws_key_pair" "aws-ec2-g7" {
  key_name = "aws-ec2-g7"
  public_key = var.SSH_PUB_KEY
}
